Add passing test to write to test container

--- a/E2E.Api/appsettings.Development.json
+++ b/E2E.Api/appsettings.Development.json
@@ -1,8 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "DockerDb": "Data Source=172.23.176.1, 1433;User ID=sa;Password=Passw0rt!;TrustServerCertificate=True;"
   }
 }
